apps/site/web/static/css/_transit-near-me.scss
@import 'variables';

.transit-near-me-header {
  margin: 3rem 0;

  .route-type-icons {
    margin: 3rem 0;
  }

  svg {
    height: 3rem;
    width: 3rem;
  }

  .icon-circle {
    fill: transparent;
    stroke: $gray-dark;
  }

  .icon-image {
    fill: $gray-dark;
  }

  p {
    text-align: center;
  }

}

.transit-near-me {
  background-color: $white;

  .form-group {
    border: 1px solid $gray-lightest;
    border-radius: $default-border-radius;
    display: block;
    margin-bottom: .1875rem;
    padding: $space-2 0;
    text-align: right;
  }

  input {
    border-width: 0;
    display: block;
    float: left;
    margin: .375rem 0 .375rem .5rem;
    outline: 0;
    // scss-lint:disable DuplicateProperty
    width: 85%; // fallback for browsers that don't support calc
    width: calc(100% - 8rem);

    &:focus {
      border-width: 0;
      outline: 0;
    }
  }

  [type=submit] {
    display: block;
    float: right;
    margin-right: .125rem;
    width: 4rem;
  }

  .clear {
    clear: both;
  }

  .location-btn {
    background: none;
    color: $link-color;
    float: left;
    margin-left: .125rem;
    padding: .375rem;

    i {
      pointer-events: none;
    }
  }

  .transit-near-me-error {
    background-color: $form-error-message;
    padding: .5em;
  }
}

.no-js .location-btn {
  display: none;
}

.geolocation-disabled .location-btn {
  display: none;
}

// scss-lint:disable VendorPrefix
@mixin set-breakpoint-columns($breakpoint, $column-count) {
  @include media-breakpoint-only($breakpoint) {
    -moz-column-count: $column-count;
    -webkit-column-count: $column-count;
    column-count: $column-count;
  }
}

.transit-near-me-results {
  @include set-breakpoint-columns(sm, 2);
  @include set-breakpoint-columns(md, 3);
  @include set-breakpoint-columns(lg, 4);
  @include set-breakpoint-columns(xxl, 4);
  border-radius: $default-border-radius;
  -moz-column-gap: $grid-gutter-width;
  -webkit-column-gap: $grid-gutter-width;
  column-gap: $grid-gutter-width;
  margin: 0;
  padding: $grid-gutter-width * 1.5;
  padding-top: $grid-gutter-width / 2;

  &.empty {
    display: none;
  }
}

.transit-near-me-gray {
  background: $gray-lightest;
}

.transit-near-me-white {
  background: $white;
}

.transit-card {
  background: $white;
  border: 1px solid $gray-lightest;
  border-radius: $default-border-radius;
  display: inline-block;
  margin-top: $grid-gutter-width;
  padding: $grid-gutter-width;
  width: 100%;

  .transit-route {
    color: $gray-dark;
    font-size: .8rem;
    margin-bottom: .25rem;

    &:last-child {
      margin-bottom: 0;
    }
  }

  .mbta-custom-icon {
    margin-right: .25rem;

    svg {
      height: 1rem;
      vertical-align: text-bottom;
      width: 1rem;
    }
  }

  .distance {
    color: $gray-light;
    text-align: right;
  }
}

